--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.rootonelabs.vicky.foodapp"
+        applicationId "com.rootonelabs.vicky.lazeez"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -25,6 +25,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-core:10.2.0'
+
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
+
 apply plugin: 'com.google.gms.google-services'
