--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
