Add to Cart Fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme" />
         <activity android:name=".FoodItems" />
-        <activity android:name=".FoodDetails"></activity>
+        <activity android:name=".FoodDetails" />
+        <activity android:name=".Cart"></activity>
     </application>
 
 </manifest>
